# msg-triage

./: .env.example  CLAUDE.md  README.md  pyproject.toml
docs/: dev_notes.md  project_state.md  tasks.md  triage_system_prompt.md
docs/prompts/: prompt-t10-proposte.md
msg_triage/: __init__.py  __main__.py  callbell_adapter.py  config.py  logging_setup.py  renderers.py  source_adapter.py  telegram_bot.py  triage_engine.py
scripts/: smoke_triage.py
tests/: test_callbell_adapter.py  test_config.py  test_renderers.py  test_telegram_bot.py  test_triage_engine.py
